--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <title>DoveBox</title>
+    <script src="./bundle.js"></script>
 </head>
 
 <body>
     <div id="root">
     </div>
-
-    <script src="./bundle.js"></script>
 </body>
 
 </html>
