--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>DoveBox</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./bundle.js"></script>
 </head>
 
